Mon Dec 22 20:33:08 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* libxlst/numbers.c: fixed xsl:number level="any" for Bug
	  129057

Sun Dec 21 21:38:11 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* libxslt/numbers.c: added namespace comparison for
	  xsl:number count function (Bug 129057)

Sun Dec 21 13:56:48 CET 2003 Daniel Veillard <daniel@veillard.com>

	* tests/docs/Makefile.am tests/docs/bug-139.xml
	  tests/general/Makefile.am tests/general/bug-139*: added
	  test for entities parsing (Bug #129489)

Sun Dec 21 20:33:27 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* tests/docs/Makefile.am tests/docs/bug-138.xml
	  tests/general/Makefile.am tests/general/bug-138*: added
	  test for namespace problem (Bug #129624)

Sun Dec 21 13:17:05 CET 2003 Daniel Veillard <daniel@veillard.com>

	* xsltproc.c: fixed #129327 make sure parser flags get transmitted to
	  the transformation context
	* libxslt/documents.c libxslt/transform.c libxslt/xsltInternals.h 
	  libxslt/xsltutils.c libxslt/xsltutils.h: add a new call
	  xsltSetCtxtParseOptions() to update parsing options in document()

Sun Dec 21 12:51:12 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/keys.c: fixed second problem on #122483, namespace
	  definitions must be propagated to keys.
	* tests/docs/Makefile.am tests/docs/bug-137.xml
	  tests/general/Makefile.am tests/docs/bug-137*: added test
	  to the regression for bug #122483
	
Sun Dec 21 12:08:45 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: added the cast needed to fix #129188 warning

Sat Dec 20 23:37:31 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* libexslt/transform.c: fixed Bug 129624 (erroneous output
	  of namespaces)

Sat Dec 20 16:22:11 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* libexslt/date.c: fixed several routines to assure empty
	  string returned (rather than a string object with a null
	  string pointer) (Bug 129561)

Mon Dec 16 00:30:47 PST 2003 William Brack <wbrack@mmm.com.hk>
